# cosmo-rag

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
cached/: chunks.pkl  faiss.index
eval/: eval_res.txt  eval_set.json  evaluate.py
src/: basic_pipeline.py  chunking.py  embed.py  ingestion.py
src/advanced/: agent.py  chunking.py  embed.py  ingestion.py  pipeline.py  tuning.py
src/baseline/: basic_pipeline.py  chunking.py  embed.py  ingestion.py
